# django-tenants

./: pyproject.toml
.github/workflows/: release.yml
